--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,19 @@
         <artifactId>jbig2-imageio</artifactId>
         <version>3.0.3</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.bytedeco</groupId>
+        <artifactId>tesseract-platform</artifactId>
+        <version>4.1.1-1.5.3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.bytedeco</groupId>
+        <artifactId>javacpp</artifactId>
+        <version>1.5.3</version>
+    </dependency>
+
 </dependencies>
 
 </project>
